2019-06-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid,ftview,ftstring] Consolidate versioning.

	* src/ftcommon.[ch] (FTDemo_Version): New function.
	* src/{ftgrid,ftview,ftstring}.c (parse_cmdline, event_help): Use it.

2019-05-24  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Add option `-d' to select variation font instance.

	* src/ttdebug.c: Include `ctype.h'.
	(requested_pos, requested_cnt): New global variables.
	(parse_design_coords): New auxiliary function.
	(Usage): Updated.
	(main): Handle option`-d'.

	* src/ttdebug.1: Updated.

2019-05-22  Werner Lemberg  <wl@gnu.org>

	[ttdebug] New key `O' to show opcode help string.

	Also add key `H' to show help on the formatting of data.

	* src/ttdebug.c (OpStrDoc): New global array.
	(RunIns) <'h'>: Move help on format of value changes to...
	<'H'>: ... this key.  Also describe format of opcode syntax.
	<'O'>: Show opcode help string.

2019-05-22  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Add support for GETVARIATION and GETDATA opcodes.

	* src/ttdebug.c: Include FT_MULTIPLE_MASTERS_H.
	(multimaster): New global variable.
	(OpStr): Updated.
	(main): Call `FT_Get_MM_Var' to initialize MM support.

2019-05-22  Werner Lemberg  <wl@gnu.org>

	* src/ttdebug.c (OpStr): Improve opcode mnemonics.

2019-05-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview,ftstring,ftgrid] Add keystroke emulator.

	* src/{ftview,ftstring,ftgrid}.c
	(parse_cmdline): New option to pass keystroke sequence.
	(Process_Event): Consume keystrokes from buffer before listening.
	(usage): Document it.
	* src/{ftview,ftstring,ftgrid}.1: Document it.

2019-05-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Prepare for scripting.

	* src/{ftview.c,ftstring.c,ftgrid.c,ftmulti.c,ftgamma.c}
	(main, Process_Event): Consolidate event handling.

2019-04-28  Werner Lemberg  <wl@gnu.org>

	[ftmulti] Add axis grouping.

	If axis grouping (key `A') is active, hidden axes that have the same